--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.66.1",
     "source-map-resolve": "^0.6.0",
     "styled-components": "^5.3.11",
     "typescript": "^5.2.2",
